using set.of for immutable sets, reset parse error tests